<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tv_place_title"
            android:id="@+id/tv_place_title"
            android:layout_weight="0.05"
            android:layout_marginTop="41dp"
            android:layout_below="@+id/tv_name_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tv_name_title"
            android:id="@+id/tv_name_title"
            android:layout_marginTop="27dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tv_start_title"
            android:id="@+id/tv_start_title"
            android:layout_marginTop="51dp"
            android:layout_below="@+id/tv_place_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/tv_name_title"
            android:layout_alignEnd="@+id/tv_name_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tv_end_title"
            android:id="@+id/tv_end_title"
            android:layout_below="@+id/tv_start_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="45dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tv_description_title"
            android:id="@+id/tv_description_title"
            android:layout_below="@+id/tv_end_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="49dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/tv_name_data"
            android:layout_above="@+id/tv_place_title"
            android:layout_toRightOf="@+id/tv_name_title"
            android:layout_toEndOf="@+id/tv_name_title"
            android:layout_marginLeft="62dp"
            android:layout_marginStart="62dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/tv_place_data"
            android:layout_above="@+id/tv_start_title"
            android:layout_alignRight="@+id/tv_name_data"
            android:layout_alignEnd="@+id/tv_name_data" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/tv_start_data"
            android:layout_alignTop="@+id/tv_start_title"
            android:layout_alignRight="@+id/tv_place_data"
            android:layout_alignEnd="@+id/tv_place_data"
            android:inputType="date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/tv_end_data"
            android:layout_above="@+id/tv_description_title"
            android:layout_alignRight="@+id/tv_start_data"
            android:layout_alignEnd="@+id/tv_start_data"
            android:inputType="date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/tv_description_data"
            android:layout_alignTop="@+id/tv_description_title"
            android:layout_alignRight="@+id/tv_end_data"
            android:layout_alignEnd="@+id/tv_end_data" />

</RelativeLayout>